fix(compat): set `overflow-wrap: break-word`
In yari, this is set on `.main-page-content`

--- a/components/compat/global.css
+++ b/components/compat/global.css
@@ -56,6 +56,7 @@
 
 * {
   box-sizing: border-box;
+  overflow-wrap: break-word;
 }
 
 /* Remove default margin */
